--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Hierarchy</title>
+    <title>User DownLine</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
         * {
@@ -118,7 +118,7 @@
 <body>
     <div class="hierarchy">
         <div class="node" onclick="toggleVisibility(event)">
-            <span>RAJ SAXENA</span>
+            <span>DownLine</span>
             <div class="children">
                 <!-- Sudhir006 Node -->
                 <div class="node" onclick="toggleVisibility(event)">
