--- a/index.html
+++ b/index.html
@@ -1,233 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User DownLine</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <title>Muskan Furniture Bill</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f7fc;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .hierarchy {
-            width: 100%;
-            max-width: 1200px;
-        }
-
-        .node {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            margin: 20px;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            position: relative;
-            width: 220px;
-        }
-
-        .node:hover {
-            background-color: #e9f5ff;
-            transform: scale(1.05);
-        }
-
-        .node span {
-            font-size: 20px;
-            font-weight: 500;
-            color: #333;
-            text-align: center;
-            margin-bottom: 10px;
-            position: relative;
-        }
-
-        .node span::before {
-            content: '\25B6'; /* Right arrow symbol */
-            position: absolute;
-            left: -30px;
-            top: 0;
-            font-size: 18px;
-            color: #007bff;
-            transition: transform 0.3s ease;
-        }
-
-        .active span::before {
-            transform: rotate(90deg);
-        }
-
-        .children {
-            display: flex;
-            justify-content: center;
-            gap: 40px;
-            flex-wrap: wrap;
-            padding-top: 15px;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 15px;
-            width: 100%;
-        }
-
-        .children > .node {
-            flex-direction: column;
-            margin-top: 15px;
-            display: none;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .active > .children > .node {
-            display: block;
-            opacity: 1;
-        }
-
-        .active > .children {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-        }
-
-        .arrow {
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: #007bff;
-            font-size: 20px;
-            transition: transform 0.3s ease;
-        }
-
-        .active .arrow {
-            transform: rotate(90deg);
-        }
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        h1 { text-align: center; }
+        h3 { margin-top: 20px; }
+        table { width: 50%; border-collapse: collapse; margin-top: 10px; }
+        th, td { border: 1px solid black; padding: 8px; text-align: left; }
+        th { background-color: #f2f2f2; }
     </style>
 </head>
 <body>
-    <div class="hierarchy">
-        <div class="node" onclick="toggleVisibility(event)">
-            <span>DownLine</span>
-            <div class="children">
-                <!-- Sudhir006 Node -->
-                <div class="node" onclick="toggleVisibility(event)">
-                    <span>Sudhir006</span>
-                    <div class="children">
-                        <div class="node" onclick="toggleVisibility(event)">
-                            <span>Vinay006</span>
-                            <div class="children">
-                                <div class="node">
-                                    <span>Vinay008</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Sudhir010 Node -->
-                <div class="node" onclick="toggleVisibility(event)">
-                    <span>Sudhir010</span>
-                    <div class="children">
-                        <div class="node" onclick="toggleVisibility(event)">
-                            <span>Sudhir020</span>
-                            <div class="children">
-                                <div class="node">
-                                    <span>Sudhir025</span>
-                                </div>
-                                <div class="node">
-                                    <span>Sudhir024</span>
-                                </div>
-                                <div class="node">
-                                    <span>Sudhir023</span>
-                                </div>
-                                <div class="node">
-                                    <span>Sudhir022</span>
-                                </div>
-                                <div class="node">
-                                    <span>Sudhir021</span>
-                                </div>
-                                <div class="node">
-                                    <span>Pradeep01</span>
-                                </div>
-                                <div class="node">
-                                    <span>Niranjan01</span>
-                                </div>
-                                <div class="node">
-                                    <span>Rubi Debi</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Sudhir011 Node -->
-                        <div class="node" onclick="toggleVisibility(event)">
-                            <span>Sudhir011</span>
-                            <div class="children">
-                                <div class="node">
-                                    <span>Sudhir019</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Sudhir013 Node -->
-                        <div class="node">
-                            <span>Sudhir013</span>
-                        </div>
-
-                        <!-- Sudhir014 Node -->
-                        <div class="node" onclick="toggleVisibility(event)">
-                            <span>Sudhir014</span>
-                            <div class="children">
-                                <div class="node">
-                                    <span>Sudhir017 or Baijnath01</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Sudhir015 Node -->
-                        <div class="node" onclick="toggleVisibility(event)">
-                            <span>Sudhir015</span>
-                            <div class="children">
-                                <div class="node">
-                                    <span>Sudhir018</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Sudhir016 Node -->
-                        <div class="node" onclick="toggleVisibility(event)">
-                            <span>Sudhir016</span>
-                            <div class="children">
-                                <div class="node">
-                                    <span>Vinay451</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        function toggleVisibility(event) {
-            // Prevent event propagation so it doesn't trigger on parent nodes
-            event.stopPropagation();
-            
-            // Toggle 'active' class to show/hide child nodes
-            const node = event.currentTarget;
-            node.classList.toggle('active');
-        }
-    </script>
+    <h1>🧾 MUSKAN FURNITURE</h1>
+    <p style="text-align: center;">
+        MITHAPUR, PATNA<br>
+        PATNA, BIHAR, INDIA - 800020<br>
+        Tel.: 9973435222 | Email: sudhir.478.sk@gmail.com
+    </p>
+    <hr>
+    <h3>Final Bill</h3>
+    <p><strong>Date</strong>: 28-May-2025<br>
+       <strong>Bill No.</strong>: MUSKAN-BILL-2025-003</p>
+    <p><strong>Deliver to</strong>:<br>
+       MITHAPUR, PATNA<br>
+       PATNA, BIHAR, INDIA - 800020</p>
+    <hr>
+    <h3>Subject: Supply of PLASTKING WPC Doors with Frames and Accessories</h3>
+    <h3>🔹 Itemized Details</h3>
+    <p><strong>Door Type 1 (With Frame & Hardware)</strong><br>
+       - Brand: PLASTKING<br>
+       - Size: 7' × 39" (3.25 ft) = 22.75 sqft<br>
+       - Quantity: 2<br>
+       - Total Area: 45.5 sqft<br>
+       - Rate: ₹700/sqft<br>
+       - Amount: ₹31,850</p>
+    <p><strong>Door Type 2 (With Frame & Hardware)</strong><br>
+       - Brand: PLASTKING<br>
+       - Size: 7' × 46" (3.83 ft) ≈ 28 sqft<br>
+       - Quantity: 3<br>
+       - Total Area: 84 sqft<br>
+       - Rate: ₹700/sqft<br>
+       - Amount: ₹58,800</p>
+    <h3>✅ Included Accessories Per Door</h3>
+    <ul>
+        <li>Outer Frame: 62 mm × 121 mm</li>
+        <li>Hinges: 3 pcs (S.S. Premium 5" × 12 mm)</li>
+        <li>Screws: 38 mm × 8 mm (S.S.)</li>
+        <li>Mortise Door Lock: S.S. Body</li>
+        <li>Tower Bolt: 2 pcs (S.S. 300 mm)</li>
+    </ul>
+    <h3>📊 Price Summary</h3>
+    <table>
+        <tr>
+            <th>Item Description</th>
+            <th>Amount (₹)</th>
+        </tr>
+        <tr>
+            <td>Door Type 1 (45.5 sqft)</td>
+            <td>31,850</td>
+        </tr>
+        <tr>
+            <td>Door Type 2 (84 sqft)</td>
+            <td>58,800</td>
+        </tr>
+        <tr>
+            <td><strong>Grand Total Payable</strong></td>
+            <td><strong>90,650</strong></td>
+        </tr>
+    </table>
+    <hr>
+    <p><strong>Authorized Signatory</strong><br>
+       MUSKAN FURNITURE</p>
 </body>
 </html>
