--- a/index.html
+++ b/index.html
@@ -203,8 +203,34 @@
             border-bottom: 1px dotted var(--primary-color);
         }
 
+        /* PRINT BUTTON STYLES */
+        .print-btn {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: var(--primary-color);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            transition: background-color 0.2s;
+            z-index: 1000;
+        }
+
+        .print-btn:hover {
+            background-color: var(--accent-color);
+        }
+
         /* PRINT MEDIA QUERY */
         @media print {
+            .print-btn {
+                display: none !important;
+            }
+
             body {
                 background: white;
                 padding: 0;
@@ -219,6 +245,9 @@
     </style>
 </head>
 <body>
+
+    <!-- Print Button -->
+    <button class="print-btn" onclick="window.print()">Print / Save as PDF</button>
 
     <div class="resume-container">
         <!-- HEADER -->
