--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            font-size: 10.5pt; /* Reduced to fit single page */
-            line-height: 1.5; /* Reduced line height */
+            font-size: 10.5pt; /* Balanced size */
+            line-height: 1.5; /* Balanced spacing */
             color: var(--text-color);
             background-color: var(--bg-color);
             display: flex;
@@ -42,7 +42,7 @@
             min-height: 297mm;
             background: white;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-            padding: 45px 45px; /* balanced padding */
+            padding: 45px 45px; /* Balanced margins */
             display: flex;
             flex-direction: column;
             position: relative;
@@ -51,12 +51,12 @@
         /* HEADER */
         header {
             border-bottom: 2px solid var(--primary-color);
-            padding-bottom: 20px; /* Reduced */
-            margin-bottom: 25px; /* Reduced */
+            padding-bottom: 20px;
+            margin-bottom: 25px;
         }
 
         h1 {
-            font-size: 28pt; /* Reduced */
+            font-size: 28pt;
             text-transform: uppercase;
             letter-spacing: 2px;
             color: var(--primary-color);
@@ -98,8 +98,8 @@
             color: var(--primary-color);
             border-bottom: 1px solid var(--border-color);
             padding-bottom: 6px;
-            margin-bottom: 15px; /* Reduced */
-            margin-top: 25px; /* Reduced */
+            margin-bottom: 15px;
+            margin-top: 25px;
             font-weight: 700;
         }
 
@@ -129,7 +129,7 @@
         }
 
         p {
-            margin-bottom: 12px; /* Reduced */
+            margin-bottom: 12px;
             text-align: left;
             font-size: 10.5pt;
         }
@@ -137,16 +137,16 @@
         ul {
             list-style-type: disc;
             margin-left: 18px;
-            margin-bottom: 15px; /* Reduced */
+            margin-bottom: 15px;
         }
 
         li {
-            margin-bottom: 5px; /* Reduced */
+            margin-bottom: 5px;
             padding-left: 4px;
         }
 
         .job, .project {
-            margin-bottom: 20px; /* Reduced */
+            margin-bottom: 20px;
         }
 
         /* RIGHT COLUMN SPECIFICS */
@@ -156,7 +156,7 @@
         }
 
         .right-column section {
-            margin-bottom: 25px; /* Reduced */
+            margin-bottom: 25px;
         }
 
         .skill-group {
